@@ -1,9 +1,11 @@
 5.0-beta1
+ * Fix incorrect seeking through the sstable iterator by IndexState (CASSANDRA-18932)
  * Upgrade Python driver to 3.28.0 (CASSANDRA-18960)
  * Add retries to IR messages (CASSANDRA-18962)
  * Add metrics and logging to repair retries (CASSANDRA-18952)
  * Remove deprecated code in Cassandra 1.x and 2.x (CASSANDRA-18959)
  * ClientRequestSize metrics should not treat CONTAINS restrictions as being equality-based (CASSANDRA-18896)
+
 
 5.0-alpha2
  * Add support for vector search in SAI (CASSANDRA-18715)
